[package]
name = "ipapi"
version = "0.1.0"
authors = ["IPQuery <admin@ipquery.io>"]
edition = "2021"
description = "A Rust library to query IP addresses using ipquery.io API"
license = "MIT"
repository = "https://github.com/ipqwery/ipapi"
homepage = "https://github.com/ipqwery/ipapi"
documentation = "https://docs.rs/ipapi"
keywords = ["ip", "query", "ipquery", "networking", "api"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
error = []
